syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "ServiceProto.Departement";

service ProtoDepartement{
	rpc AddDepartement(AddDepartementMessage) returns (SuccessReply){}
	rpc GetDepartementById(GetByIdRequest) returns (DepartementResponse){}
}

message AddDepartementMessage{
	string name = 1;
	string location = 2;
}

message GetByIdRequest{
	int64 id = 1;
}

message SuccessReply{
	bool success = 1;
	string reason = 2;
}

message DepartementResponse{
	int64 id = 1;
	string name = 2;
	string location = 3;

	repeated DepartementEmployeeResponse employees = 4;
}

message DepartementEmployeeResponse{
	int64 id = 1;
	string firstName = 2;
	string lastName = 3;
	google.protobuf.Timestamp JoinDate = 4;
}